Card with tailwind css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <div id="root"></div>
     <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>   -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
+    />
+
     <script type="module" src="./src/App.js"></script>
   </body>
 </html>
