--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>   -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha384-Z2My4C5e5Uz+2sXDw5aDrMML2XCxNEOqAa4J/iQ/Et9jPpa7bLwP+UEFfu8LdIMj"
+      crossorigin="anonymous"
     />
 
     <script type="module" src="./src/App.js"></script>
